test/CheckError/Struct/OpaqueStructMove.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

struct OpaqueStruct;

void f(OpaqueStruct* ptr) {
	// CHECK: .loci:8:16: error: cannot find method '__move' for type 'OpaqueStruct'
	unused_result move *ptr;
}

// CHECK: 2 errors generated.
